fix: Change scrollbar

--- a/Home/StartPage/StartPage.css
+++ b/Home/StartPage/StartPage.css
@@ -1,6 +1,5 @@
 body{
   background-color: #272727;
-  overflow: hidden;
 }
 
 .masthead {
@@ -129,5 +128,19 @@ body{
   display: block;
   cursor: pointer;
   font-size: 14px;
+}
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px grey; 
+    border-radius: 2px;
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(233, 180, 8); 
+    border-radius: 2px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(233, 180, 8); 
 }
  
